--- a/test.html
+++ b/test.html
@@ -28,17 +28,17 @@
     <script src="https://cdn.jsdelivr.net/gh/gn-math/gn-math.github.io@main/gnmath.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>gn-math</title>
-    <meta name="title" content="GN-Math">
-    <meta name="description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on GN-Math. Fast, free, no downloads—perfect for school or home.">
+    <title>Temu-N-Taco</title>
+    <meta name="title" content="Temu-N-Taco">
+    <meta name="description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on Temu-N-Taco. Fast, free, no downloads—perfect for school or home.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://gn-math.github.io/">
-    <meta property="og:title" content="GN-Math">
-    <meta property="og:description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on GN-Math. Fast, free, no downloads—perfect for school or home.">
+    <meta property="og:title" content="Temu-N-Taco">
+    <meta property="og:description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on Temu-N-Taco. Fast, free, no downloads—perfect for school or home.">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://gn-math.github.io/">
-    <meta name="twitter:title" content="GN-Math">
-    <meta name="twitter:description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on GN-Math. Fast, free, no downloads—perfect for school or home.">
+    <meta name="twitter:title" content="Temu-N-Taco">
+    <meta name="twitter:description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on Temu-N-Taco. Fast, free, no downloads—perfect for school or home.">
     <style>
 :root {
     --primary: #fc2651;
@@ -645,7 +645,7 @@ footer {
 <body class="dark-mode">
     <header>
         <div class="header-content">
-            <div class="logo">gn-math</div>
+            <div class="logo">Temu-N-Taco</div>
             <div class="search-container">
                 <input type="text" id="searchBar" placeholder="Search zones..." oninput="filterZones()">
                 <select id="sortOptions" onchange="sortZones()">
