--- a/singlefile.html
+++ b/singlefile.html
@@ -751,10 +751,10 @@
         const sortOptions = document.getElementById('sortOptions');
         // https://www.jsdelivr.com/tools/purge
         const zonesurls = [
-            "https://cdn.jsdelivr.net/gh/gn-math/assets@main/zones.json",
-            "https://cdn.jsdelivr.net/gh/gn-math/assets@latest/zones.json",
-            "https://cdn.jsdelivr.net/gh/gn-math/assets@master/zones.json",
-            "https://cdn.jsdelivr.net/gh/gn-math/assets/zones.json"
+            "https://cdn.jsdelivr.net/gh/JJthecoolest/assets@main/zones.json",
+            "https://cdn.jsdelivr.net/gh/JJthecoolest/assets@latest/zones.json",
+            "https://cdn.jsdelivr.net/gh/JJthecoolest/assets@master/zones.json",
+            "https://cdn.jsdelivr.net/gh/JJthecoolest/assets/zones.json"
         ];
         let zonesURL = zonesurls[Math.floor(Math.random() * zonesurls.length)];
         const coverURL = "https://cdn.jsdelivr.net/gh/gn-math/covers@main";
@@ -775,7 +775,7 @@
                         shajson = await sharesponse.json();
                         sha = shajson[0]['sha'];
                         if (sha) {
-                            zonesURL = `https://cdn.jsdelivr.net/gh/gn-math/assets@${sha}/zones.json`;
+                            zonesURL = `https://cdn.jsdelivr.net/gh/JJthecoolest/assets@${sha}/zones.json`;
                         }
                     } catch (error) {
                         try {
@@ -783,7 +783,7 @@
                             if (secondarysharesponse && secondarysharesponse.status === 200) {
                                 sha = (await secondarysharesponse.text()).trim();
                                 if (sha) {
-                                    zonesURL = `https://cdn.jsdelivr.net/gh/gn-math/assets@${sha}/zones.json`;
+                                    zonesURL = `https://cdn.jsdelivr.net/gh/JJthecoolest/assets@${sha}/zones.json`;
                                 }
                             }
                         } catch (error) {}
