--- a/singlefile.html
+++ b/singlefile.html
@@ -775,7 +775,7 @@
                         shajson = await sharesponse.json();
                         sha = shajson[0]['sha'];
                         if (sha) {
-                            zonesURL = `https://cdn.jsdelivr.net/gh/JJthecoolest/assets@${sha}/zones.json`;
+                            zonesURL = `https://cdn.jsdelivr.net/gh/JJthecoolest/assets/zones.json`;
                         }
                     } catch (error) {
                         try {
@@ -783,7 +783,7 @@
                             if (secondarysharesponse && secondarysharesponse.status === 200) {
                                 sha = (await secondarysharesponse.text()).trim();
                                 if (sha) {
-                                    zonesURL = `https://cdn.jsdelivr.net/gh/JJthecoolest/assets@${sha}/zones.json`;
+                                    zonesURL = `https://cdn.jsdelivr.net/gh/JJthecoolest/assets/zones.json`;
                                 }
                             }
                         } catch (error) {}
