--- a/singlefile.html
+++ b/singlefile.html
@@ -3,9 +3,9 @@
 
 <head>
     <base href="https://cdn.jsdelivr.net/gh/gn-math/gn-math.github.io@main/">
-    <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
-    <link rel="apple-touch-icon" href="/favicon.png">
+    <link rel="icon" type="image/png" href="https://resources.finalsite.net/images/f_auto,q_auto/v1626100427/k12albemarleorg/uj41eppe27bunrvhwnep/PowerSchoolLogos_Vertical-01.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://resources.finalsite.net/images/f_auto,q_auto/v1626100427/k12albemarleorg/uj41eppe27bunrvhwnep/PowerSchoolLogos_Vertical-01.png">
+    <link rel="apple-touch-icon" href="https://resources.finalsite.net/images/f_auto,q_auto/v1626100427/k12albemarleorg/uj41eppe27bunrvhwnep/PowerSchoolLogos_Vertical-01.png">
     <script>
         //window.addEventListener('beforeunload', function (event) {
         // event.preventDefault();
@@ -1319,7 +1319,7 @@
             const link = document.querySelector("link[rel~='icon']");
             link.rel = "icon";
             if ((url + "").trim().length === 0) {
-                link.href = "favicon.png";
+                link.href = "https://resources.finalsite.net/images/f_auto,q_auto/v1626100427/k12albemarleorg/uj41eppe27bunrvhwnep/PowerSchoolLogos_Vertical-01.png";
             } else {
                 link.href = url;
             }
