--- a/singlefile.html
+++ b/singlefile.html
@@ -47,8 +47,8 @@
     <script src="https://cdn.jsdelivr.net/gh/gn-math/gn-math.github.io@main/gnmath.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Schoology</title>
-    <meta name="title" content="Temu-N-Taco">
+    <title>Temu-N-Taco</title>
+    <meta name="title" content="Home | Schoology">
     <meta name="description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on Temu-N-Taco. Fast, free, no downloads—perfect for school or home.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://gn-math.github.io/">
