--- a/singlefile.html
+++ b/singlefile.html
@@ -47,16 +47,16 @@
     <script src="https://cdn.jsdelivr.net/gh/gn-math/gn-math.github.io@main/gnmath.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home|Schoology</title>
-    <meta name="title" content="Home|Schoology">
+    <title>FAVNAME</title>
+    <meta name="title" content="Temu-N-Taco">
     <meta name="description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on Temu-N-Taco. Fast, free, no downloads—perfect for school or home.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://gn-math.github.io/">
-    <meta property="og:title" content="Home|Schoology">
+    <meta property="og:title" content="Temu-N-Taco">
     <meta property="og:description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on Temu-N-Taco. Fast, free, no downloads—perfect for school or home.">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://gn-math.github.io/">
-    <meta name="twitter:title" content="Home|Schoology">
+    <meta name="twitter:title" content="Temu-N-Taco">
     <meta name="twitter:description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on Temu-N-Taco. Fast, free, no downloads—perfect for school or home.">
     <style>
         :root {
