--- a/singlefile.html
+++ b/singlefile.html
@@ -3,9 +3,9 @@
 
 <head>
     <base href="https://cdn.jsdelivr.net/gh/gn-math/gn-math.github.io@main/">
-    <link rel="icon" type="image/png" href="https://resources.finalsite.net/images/f_auto,q_auto/v1626100427/k12albemarleorg/uj41eppe27bunrvhwnep/PowerSchoolLogos_Vertical-01.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://resources.finalsite.net/images/f_auto,q_auto/v1626100427/k12albemarleorg/uj41eppe27bunrvhwnep/PowerSchoolLogos_Vertical-01.png">
-    <link rel="apple-touch-icon" href="https://resources.finalsite.net/images/f_auto,q_auto/v1626100427/k12albemarleorg/uj41eppe27bunrvhwnep/PowerSchoolLogos_Vertical-01.png">
+    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/favicon.png">
     <script>
         //window.addEventListener('beforeunload', function (event) {
         // event.preventDefault();
@@ -47,7 +47,7 @@
     <script src="https://cdn.jsdelivr.net/gh/gn-math/gn-math.github.io@main/gnmath.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAVNAME</title>
+    <title>Temu-N-Taco</title>
     <meta name="title" content="Temu-N-Taco">
     <meta name="description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on Temu-N-Taco. Fast, free, no downloads—perfect for school or home.">
     <meta property="og:type" content="website">
@@ -702,7 +702,7 @@
                     <option value="id">ID (Date)</option>
                     <option value="popular">Popular</option>
                 </select>
-                <button href="javascript:saveData()" id="sortOptions">Export Save</button>
+                <button onclick="saveData()" id="sortOptions">Export Save</button>
                 <button href="#" onclick="document.getElementById('importData').click(); return false;" id="sortOptions">Import Save</button>
             </div>
             <div class="control-buttons">
@@ -1319,7 +1319,7 @@
             const link = document.querySelector("link[rel~='icon']");
             link.rel = "icon";
             if ((url + "").trim().length === 0) {
-                link.href = "https://resources.finalsite.net/images/f_auto,q_auto/v1626100427/k12albemarleorg/uj41eppe27bunrvhwnep/PowerSchoolLogos_Vertical-01.png";
+                link.href = "favicon.png";
             } else {
                 link.href = url;
             }
