--- a/singlefile.html
+++ b/singlefile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <base href="https://cdn.jsdelivr.net/gh/gn-math/gn-math.github.io@main/">
+    <base href="https://cdn.jsdelivr.net/gh/jjthecoolest/goon/">
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
     <link rel="apple-touch-icon" href="/favicon.png">
@@ -44,7 +44,7 @@
             signalGooglefcPresent();
         })();
     </script>
-    <script src="https://cdn.jsdelivr.net/gh/gn-math/gn-math.github.io@main/gnmath.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/jjthecoolest/goon/gnmath.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temu-N-Taco</title>
