--- a/singlefile.html
+++ b/singlefile.html
@@ -47,17 +47,17 @@
     <script src="https://cdn.jsdelivr.net/gh/jjthecoolest/goon/gnmath.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temu-N-Taco</title>
-    <meta name="title" content="Temu-N-Taco">
-    <meta name="description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on Temu-N-Taco. Fast, free, no downloads—perfect for school or home.">
+    <title>Blooket1-V1</title>
+    <meta name="title" content="Blooket1-V1">
+    <meta name="description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on Blooket1-V1. Fast, free, no downloads—perfect for school or home.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://gn-math.github.io/">
-    <meta property="og:title" content="Temu-N-Taco">
-    <meta property="og:description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on Temu-N-Taco. Fast, free, no downloads—perfect for school or home.">
+    <meta property="og:title" content="Blooket1-V1">
+    <meta property="og:description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on Blooket1-V1. Fast, free, no downloads—perfect for school or home.">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://gn-math.github.io/">
-    <meta name="twitter:title" content="Temu-N-Taco">
-    <meta name="twitter:description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on Temu-N-Taco. Fast, free, no downloads—perfect for school or home.">
+    <meta name="twitter:title" content="Blooket1-V1">
+    <meta name="twitter:description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on Blooket1-V1. Fast, free, no downloads—perfect for school or home.">
     <style>
         :root {
             --primary: #ff7c00;
@@ -693,7 +693,7 @@
     <header>
 
 <div class="header-content">
-            <div class="logo">Temu-N-Taco</div>
+            <div class="logo">Blooket1-V1</div>
             <div class="search-container">
                 <input type="text" id="searchBar" placeholder="Search zones..." oninput="filterZones()">
 
@@ -845,7 +845,7 @@
                                     popup.style.boxShadow = "0px 0px 10px rgba(0,0,0,0.1)";
                                     popup.style.fontFamily = "Arial, sans-serif";
 
-                                    popup.innerHTML = `Play more games at <a href="https://Temu-N-Taco.github.io" target="_blank" style="color:#004085; font-weight:bold;">https://Temu-N-Taco.github.io</a>!`;
+                                    popup.innerHTML = `Play more games at <a href="https://Blooket1-V1.github.io" target="_blank" style="color:#004085; font-weight:bold;">https://Blooket1-V1.github.io</a>!`;
 
                                     const closeBtn = document.createElement("button");
                                     closeBtn.innerText = "✖";
@@ -1328,7 +1328,7 @@
 
         function cloakName(string) {
             if ((string + "").trim().length === 0) {
-                document.title = "Temu-N-Taco";
+                document.title = "Blooket1-V1";
                 return;
             }
             document.title = string;
@@ -1381,9 +1381,9 @@
         <div style="max-height: 60vh; overflow-y: auto;">
             <h2>PRIVACY POLICY</h2>
             <p>Last updated April 17, 2025</p>
-            <p>This Privacy Notice for Temu-N-Taco ("we," "us," or "our"), describes how and why we might access, collect, store, use, and/or share ("process") your personal information when you use our services ("Services"), including when you:</p>
+            <p>This Privacy Notice for Blooket1-V1 ("we," "us," or "our"), describes how and why we might access, collect, store, use, and/or share ("process") your personal information when you use our services ("Services"), including when you:</p>
             <ul>
-                <li>Visit our website at <a href="https://Temu-N-Taco.github.io">https://Temu-N-Taco.github.io</a>, or any website of ours that links to this Privacy Notice</li>
+                <li>Visit our website at <a href="https://Blooket1-V1.github.io">https://Blooket1-V1.github.io</a>, or any website of ours that links to this Privacy Notice</li>
                 <li>Engage with us in other related ways, including any sales, marketing, or events</li>
             </ul>
             <p>Questions or concerns? Reading this Privacy Notice will help you understand your privacy rights and choices. We are responsible for making decisions about how your personal information is processed. If you do not agree with our policies and practices, please do not use our Services. If you still have any questions or concerns, please contact us at <a href="https://discord.com/404">https://discord.com/404</a>.</p>
