--- a/singlefile.html
+++ b/singlefile.html
@@ -60,8 +60,8 @@
     <meta name="twitter:description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on Blooket1-V1. Fast, free, no downloads—perfect for school or home.">
     <style>
         :root {
-            --primary: #ff7c00;
-            --primary-hover: #ff7c00;
+            --primary: #001eff;
+            --primary-hover: #001eff;
             --primary-light: rgba(255, 124, 0, 0.1);
             --primary-lighter: rgba(252, 38, 81, 0.05);
             --accent: #8b5cf6;
@@ -94,8 +94,8 @@
         }
 
         .dark-mode {
-            --primary: #ff7c00;
-            --primary-hover: #ff7c00;
+            --primary: #001eff;
+            --primary-hover: #001eff;
             --primary-light: rgba(255, 124, 0, .15);
             --primary-lighter: rgba(252, 38, 81, 0.08);
             --accent: #a855f7;
@@ -184,7 +184,7 @@
             border-radius: var(--radius);
             background: var(--glass);
             backdrop-filter: blur(20px);
-            color: #ff7c00;
+            color: #001eff;
             font-size: 15px;
             outline: none;
             transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
@@ -196,7 +196,7 @@
             background: #3D4257;
             transform: translateY(-1px);
             box-shadow: var(--shadow);
-            color: #ff7c00;
+            color: #001eff;
         }
 
         #searchBar:focus {
@@ -207,7 +207,7 @@
         }
 
         #searchBar::placeholder {
-            color: #ff7c00;
+            color: #001eff;
         }
 
         #sortOptions {
@@ -216,7 +216,7 @@
             border-radius: var(--radius);
             background: var(--glass);
             backdrop-filter: blur(20px);
-            color: #ff7c00;
+            color: #001eff;
             font-size: 15px;
             cursor: pointer;
             outline: none;
@@ -229,7 +229,7 @@
             background: #3D4257;
             transform: translateY(-1px);
             box-shadow: var(--shadow);
-            color: #ff7c00;
+            color: #001eff;
         }
 
         .control-buttons {
@@ -307,7 +307,7 @@
         .zone-item:hover {
             transform: translateY(-8px) scale(1.02);
             box-shadow: #FF0000;
-            border-color: #ff7c00;
+            border-color: #001eff;
         }
 
         .zone-item:hover::before {
@@ -358,7 +358,7 @@
         }
 
         .zone-item:hover button {
-            color: #ff7c00;
+            color: #001eff;
             background: rgba(252, 38, 81, 0.05);
         }
 
@@ -706,7 +706,7 @@
                 <button href="#" onclick="document.getElementById('importData').click(); return false;" id="sortOptions">Import Save</button>
             </div>
             <div class="control-buttons">
-                <button id="settings" style="background-color: var(--primary-color); color: #ff7c00; border: none; border-radius: 4px; padding: 0.5rem 2rem; font-size: 16px; cursor: pointer;">Settings</button>
+                <button id="settings" style="background-color: var(--primary-color); color: #001eff; border: none; border-radius: 4px; padding: 0.5rem 2rem; font-size: 16px; cursor: pointer;">Settings</button>
             </div>
         </div>
     </header>
